...
                android:layout_height="230dp"
                android:src="@drawable/espaciofondo"
                android:scaleType="centerCrop" />

            <!-- Nombre del elemento -->
            <TextView
                android:id="@+id/detailName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="HISPASAT 30W-6"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
...
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="12dp" />

                <TextView
                    android:id="@+id/detailAgency"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="🏢 Agencia: Hispasat"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:textStyle="bold"
...
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:lineSpacingExtra="3dp"
                    android:layout_marginBottom="18dp" />

                <Button
                    android:id="@+id/favoriteButton"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:background="@drawable/favorite_button_background"
                    android:text="Añadir a favoritos"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>
...
